[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/title-menu/title_menu.gd" type="Script" id=1]

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 50.0
margin_bottom = 14.0
text = "Regression Testing"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 354.0
margin_top = 250.0
margin_right = 445.0
margin_bottom = 350.0
custom_constants/separation = 20

[node name="Play" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 20.0
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 40.0
margin_right = 91.0
margin_bottom = 60.0
text = "Quit"

[node name="Debug" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 91.0
margin_bottom = 100.0
text = "Debug Level"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/VBoxContainer/Play" to="." method="_on_level_one_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Debug" to="." method="_on_level_debug_pressed"]
